	directory as "notgame.cfg" if you wanna play. :)
	
-------------------------------------------------------------------------------
Tue Sep 14 19:16:06 PDT 1999	Michael Jennings <mej@eterm.org>

	Working towards getting the "play game" data from the right places.
	
-------------------------------------------------------------------------------
Thu Sep 16 16:56:20 PDT 1999	Michael Jennings <mej@eterm.org>

	The Not Game is now completely playable.  Only a few additions left
	to make (namely, making the "Current Player" label accurate, coding
	the "Add" dialog boxes, and writing a configuration saver).

	Please report any bugs, with debugging output if possible (specify
	--with-debugging when running configure or autogen.sh).
	
-------------------------------------------------------------------------------
Thu Sep 16 18:31:52 PDT 1999	Michael Jennings <mej@eterm.org>

	The "Current Player" label works now.  So do computer players.  (If
	you specify a player as "AI" or "computer" in the config file, the
	program will eliminate a restaurant at random each time that player's
	turn comes up.)
	
-------------------------------------------------------------------------------
Thu Sep 16 19:30:21 PDT 1999	Michael Jennings <mej@eterm.org>

	You can now save your current configuration.  This will be more useful
	once you can actually add and delete players and destinations. :-)
	
-------------------------------------------------------------------------------
Mon Sep 27 18:03:41 PDT 1999	Michael Jennings <mej@eterm.org>

	Code cleanups to make for a cleaner compile.
	
-------------------------------------------------------------------------------
Thu Sep 30 18:54:47 PDT 1999	Michael Jennings <mej@eterm.org>

	Interface changes on the pregame window, and a prototype for a player
	group editing window.  Click on "Add/Delete Players" for a preview.
	
-------------------------------------------------------------------------------